# rocsolver-bench

./: CMakeLists.txt
cline-docs/: argparse.md  rocsolver_sgesvdj_strided_batched.md  rocsolver_ssyevj_strided_batched.md
src/: bench_openblas_sgesvd.cpp  bench_openblas_sgesvdj_strided_batched.cpp  bench_openblas_ssyev.cpp  bench_openblas_ssyevd.cpp  bench_openblas_ssyevj_strided_batched.cpp  bench_rocsolver_dgeqrf_batched.cpp  bench_rocsolver_dgeqrf_strided_batched.cpp  bench_rocsolver_sgesvdj_strided_batched.cpp  bench_rocsolver_ssyevj_strided_batched.cpp
